# papernest-backend

./: .gitignore  .pre-commit-config.yaml  README.md  dev.dockerfile  pyproject.toml
.devcontainer/: devcontainer.json
src/: data_processor.py  extractor.py  main.py
src/models/: operator.py
src/services/: address_data_gouv.py
src/utils/: gps_convert_functions.py
