[tool.poetry]
name = "papernest-backend-challenge"
version = "0.1.0"
description = ""
authors = ["Maxime Bustros <maxime.bustros@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"