[tool.poetry]
name = "papernest-backend-challenge"
version = "0.1.0"
description = ""
authors = ["Maxime Bustros <maxime.bustros@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
pyproj = "^3.6.0"
pandas = "^2.0.3"
requests = "^2.31.0"
uvicorn = "^0.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"